replace Guava and Guice usage with stream API and JSR-330 in kb-invoice
This is 5th part and last PR of killbill-invoice work for 1615.